Add bootRun config to build.gradle to support System properties

--- a/cities-web/build.gradle
+++ b/cities-web/build.gradle
@@ -5,6 +5,10 @@ bootJar {
     classifier = 'exec'
 }
 
+bootRun {
+    systemProperties = System.properties
+}
+
 cfConfig {
     //CF Details
     ccHost = "api.run.pivotal.io"
