--- a/cities-web/src/main/resources/application.yml
+++ b/cities-web/src/main/resources/application.yml
@@ -14,6 +14,16 @@ management:
     web:
       exposure:
         include: "*"
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+      sla:
+        http:
+          server:
+            requests: 1ms,5ms
 
 logging:
   level:
