--- a/cities-web/pom.xml
+++ b/cities-web/pom.xml
@@ -51,9 +51,14 @@
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.2</version>
+			<version>42.2.4</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
