--- a/cities-domain/build.gradle
+++ b/cities-domain/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.hibernate:hibernate-validator:6.0.11.Final')
-    compile('org.hibernate:hibernate-java8')
-    testCompile('org.hsqldb:hsqldb:2.4.1')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-validation')
+    testImplementation('org.hsqldb:hsqldb:2.7.4')
 }
