--- a/cities-web/pom.xml
+++ b/cities-web/pom.xml
@@ -40,7 +40,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-rest-hal-browser</artifactId>
+			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
@@ -53,18 +53,18 @@
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
-			<version>1.3.6</version>
+			<version>1.15.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.3.9</version>
+			<version>42.7.7</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.7.1</version>
+			<version>2.7.4</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
@@ -74,99 +74,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<!-- Until https://github.com/spotify/dockerfile-maven/pull/89 is addressed -->
-			<!-- Copy Dockerfile from specs/docker directory into project root -->
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.basedir}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>specs/docker</directory>
-									<includes>
-										<include>Dockerfile</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
 				<configuration>
-					<filesets>
-						<fileset>
-							<directory>${project.basedir}</directory>
-							<includes>
-								<include>Dockerfile</include>
-							</includes>
-							<followSymlinks>false</followSymlinks>
-						</fileset>
-					</filesets>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>1.4.0</version>
-				<executions>
-					<execution>
-						<id>build-and-tag-latest</id>
-						<phase>package</phase>
-						<goals>
-							<goal>build</goal>
-							<goal>tag</goal>
-						</goals>
-						<configuration>
-							<tag>latest</tag>
-						</configuration>
-					</execution>
-					<execution>
-						<id>build-and-tag-version</id>
-						<phase>package</phase>
-						<goals>
-							<goal>build</goal>
-							<goal>tag</goal>
-						</goals>
-						<configuration>
-							<tag>${project.version}</tag>
-						</configuration>
-					</execution>
-					<execution>
-						<id>push-latest</id>
-						<phase>install</phase>
-						<goals>
-							<goal>push</goal>
-						</goals>
-						<configuration>
-							<tag>latest</tag>
-						</configuration>
-					</execution>
-					<execution>
-						<id>push-version</id>
-						<phase>install</phase>
-						<goals>
-							<goal>push</goal>
-						</goals>
-						<configuration>
-							<tag>${project.version}</tag>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<repository>${docker.image.prefix}/${project.artifactId}</repository>
-					<buildArgs>
-						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-					</buildArgs>
+					<image>
+						<name>${docker.image.prefix}/${project.artifactId}:${project.version}</name>
+						<tags>
+							<tag>${docker.image.prefix}/${project.artifactId}:latest</tag>
+						</tags>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
