--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,13 +22,13 @@
 		<kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<kotlin.version>1.3.70</kotlin.version>
-		<mockito.version>2.20.1</mockito.version>
-		<assertj.version>3.9.1</assertj.version>
-		<mockito-kotlin.version>1.6.0</mockito-kotlin.version>
-		<jackson.version>2.9.6</jackson.version>
-		<flyway.version>6.3.0</flyway.version>
+		<java.version>21</java.version>
+		<kotlin.version>2.2.20</kotlin.version>
+		<mockito.version>5.19.0</mockito.version>
+		<assertj.version>3.27.4</assertj.version>
+		<mockito-kotlin.version>6.0.0</mockito-kotlin.version>
+		<jackson.version>2.20.0</jackson.version>
+		<flyway.version>11.13.1</flyway.version>
 	</properties>
 
 	<modules>
@@ -53,10 +53,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib-jre8</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-reflect</artifactId>
 		</dependency>
 		<dependency>
@@ -66,6 +62,10 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-hsqldb</artifactId>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -97,17 +97,17 @@
 		<dependency>
     		<groupId>net.bytebuddy</groupId>
     		<artifactId>byte-buddy</artifactId>
-    		<version>1.8.15</version>
+    		<version>1.17.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
     		<groupId>net.bytebuddy</groupId>
     		<artifactId>byte-buddy-agent</artifactId>
-    		<version>1.8.15</version>
+    		<version>1.17.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.nhaarman</groupId>
+			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
 			<version>${mockito-kotlin.version}</version>
 			<scope>test</scope>
@@ -126,7 +126,7 @@
 						<plugin>spring</plugin>
 						<plugin>jpa</plugin>
 					</compilerPlugins>
-					<jvmTarget>1.8</jvmTarget>
+					<jvmTarget>21</jvmTarget>
 				</configuration>
 				<executions>
 					<execution>
